# jules_client

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  components.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: ci.yml  release.yml
src/: global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs  models.rs
src-tauri/src/commands/: mod.rs
src/components/: new_session.svelte  status_config.svelte
src/lib/: debug-utils.ts  env.ts  error-handler.ts  logger.ts  performance.ts  status_config.ts  validation.ts
src/lib/components/: DiffPatch.svelte  Markdown.svelte
src/lib/components/ui/skeleton/: index.ts  skeleton.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/activities/: +page.svelte
src/routes/sessions/[id]/: +page.svelte
src/routes/sessions/[id]/components/: ActivityItem.svelte  ActivityList.svelte  ArtifactDisplay.svelte  MessageInput.svelte  SessionHeader.svelte  SessionSidebar.svelte
src/routes/settings/: +page.svelte
src/routes/sources/: +page.svelte
src/types/: index.ts
